WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184247
RELEASE_ASSERT in CaptionUserPreferencesMediaAF::CaptionUserPreferencesMediaAF() when MediaToolbox.framework missing
https://bugs.webkit.org/show_bug.cgi?id=184247
Summary
RELEASE_ASSERT in CaptionUserPreferencesMediaAF::CaptionUserPreferencesMediaA...
Jer Noble
Reported
2018-04-02 14:39:22 PDT
RELEASE_ASSERT in CaptionUserPreferencesMediaAF::CaptionUserPreferencesMediaAF() when MediaToolbox.framework missing
Attachments
Patch
(1.86 KB, patch)
2018-04-02 14:43 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.87 KB, patch)
2018-04-02 14:46 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.89 KB, patch)
2018-04-04 11:26 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-04-02 14:39:42 PDT
<
rdar://problem/39007591
>
Jer Noble
Comment 2
2018-04-02 14:43:11 PDT
Created
attachment 337032
[details]
Patch
Jer Noble
Comment 3
2018-04-02 14:46:13 PDT
Created
attachment 337034
[details]
Patch for landing
Jer Noble
Comment 4
2018-04-04 11:26:47 PDT
Created
attachment 337195
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2018-04-04 13:19:06 PDT
Comment on
attachment 337195
[details]
Patch for landing Clearing flags on attachment: 337195 Committed
r230272
: <
https://trac.webkit.org/changeset/230272
>
WebKit Commit Bot
Comment 6
2018-04-04 13:19:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug