RELEASE_ASSERT in CaptionUserPreferencesMediaAF::CaptionUserPreferencesMediaAF() when MediaToolbox.framework missing https://bugs.webkit.org/show_bug.cgi?id=184247 <rdar://problem/39007591>

Rubber-stamped by Eric Carlson.

Use SOFT_LINK_FRAMEWORK_OPTIONAL for frameworks which are not guaranteed to be present.

* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::CaptionUserPreferencesMediaAF):


Canonical link: https://commits.webkit.org/199862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230272 268f45cc-cd09-0410-ab3c-d52691b4dbfc